[workspace]

members = [
  "dayx",
  "day7",
  "day6",
  "day5",
  "day4",
  "day3",
  "day2",
  "day1",
]

[workspace.package]
version = "0.1.0"
authors = ["Andreas Andersson <andreas@neoboid.com"]
edition = "2021"
homepage = "https://www.neoboid.com"
repository = "https://www.github.com/derwiath/adventofcode-2022"
license = "MIT"

[workspace.dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
